--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/dashboard/dashboard.component.html
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/dashboard/dashboard.component.html
@@ -15,7 +15,7 @@
         <div class="number-values">23</div>
       </mat-card>
       <mat-card class="card">
-        <div>Review questions</div>
+        <div>Pending for Approval</div>
         <div class="number-values">2</div>
       </mat-card>
     </div>
