--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/add-qa-entry/add-qa-entry.component.css
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/add-qa-entry/add-qa-entry.component.css
@@ -1,20 +1,32 @@
 .parent {
   display: flex;
   flex-direction: column;
-  width: 75%;
-  margin-left: 16%;
+  width: 90%;
+  margin-left: 24px;
   margin-right: auto;
   margin-bottom: 24px;
 }
 
 .head {
-  margin-left: 16%;
+  margin-top: 16px;
+  margin-left: 24px;
+  margin-bottom: 16px;
+  width: 100%;
   display: flex;
-  width: max-content;
-  justify-items: center;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: x-large;
-  margin-bottom: 16px;
+}
+.close {
+  cursor: pointer;
+  outline: none;
+  position: absolute;
+  font-size: medium;
+  color: #1776bf;
+  right: 0;
+  font-family: Roboto, Helvetica, Arial, sans-serif;
+  justify-self: flex-end;
+  padding-right: 8px;
+  padding-bottom: 8px;
 }
 
 .textarea {
@@ -117,13 +129,4 @@ mat-icon {
   margin-right: 10px;
 }
 
-.close {
-  cursor: pointer;
-  outline: none;
-  font-size: medium;
-  color: #1776bf;
-  font-family: Roboto, Helvetica, Arial, sans-serif;
-  float: right;
-  padding-right: 16px;
-  padding-bottom: 16px;
-}
+
