--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/category-of-questions/category-of-questions.component.html
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/category-of-questions/category-of-questions.component.html
@@ -1,6 +1,33 @@
+<div>
+  <div class="head">
+    <div class="list">
+      <div class="breadcrumb" [routerLink]="['/main']" >Home</div> 
+      <mat-icon>chevron_right</mat-icon>
+      <div class="breadcrumb" [routerLink]="['/main/home/category']" >Category</div>
+      <mat-icon>chevron_right</mat-icon>
+      <div class="breadcrumb" >{{ category }}</div>
+    </div>
+    <div class="topbar">
+      <select class="pagesize" (change)="onChange($event)">
+        <option *ngFor="let item of pagesizelist" [value]="item"
+          >{{ item }}
+        </option>
+      </select>
+      <div class="navigation">
+        <mat-icon (click)="previousPage()">chevron_left</mat-icon>
+        <mat-icon (click)="nextPage()">chevron_right</mat-icon>
+      </div>
+    </div>
+  </div>
+  
+</div>
 <div class="list-of-questions">
   <ul>
-    <mat-card class="question-card" matRipple *ngFor="let list of getQuestions()">
+    <mat-card
+      class="question-card"
+      matRipple
+      *ngFor="let list of getQuestions()"
+    >
       <div class="question-item">
         <div class="answer-layout">
           <div class="no-of-answers">{{ list.answerCount }}</div>
@@ -9,12 +36,17 @@
         <div class="question-layout">
           <a
             class="question"
-
             [routerLink]="['/main/qna', list.Question.id]"
             (click)="onClick(list.Question.id)"
             >{{ list.Question.question }}</a
           >
-          <div class="description"[routerLink]="['/main/qna', list.Question.id]"  (click)="onClick(list.Question.id)">{{list.Question.description}}</div>
+          <div
+            class="description"
+            [routerLink]="['/main/qna', list.Question.id]"
+            (click)="onClick(list.Question.id)"
+          >
+            {{ list.Question.description }}
+          </div>
           <span
             *ngFor="let tag of getTags(list.tags)"
             class="chips"
