--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/dashboard/dashboard.component.css
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/dashboard/dashboard.component.css
@@ -8,8 +8,7 @@
 }
 
 .parent-lay {
-  width: 84%;
-  margin-left: 16%;
+  width: 100%;
 }
 .headers {
   padding: 0;
@@ -21,7 +20,7 @@
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   padding: 0;
   margin-right: 0;
-  margin-top: 0;
+  margin-top: 16px;
   margin-bottom: 0;
   margin-left: 24px;
 }
