--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/filters/filters.component.css
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/filters/filters.component.css
@@ -8,14 +8,15 @@
   background-color: #ffffff;
 }
 .breadcrumbs {
-  margin-right: 16px;
-  background-color: #eeeeee;
-  position: fixed;
-  top: 0;
-  left: 0;
+  /* background-color: #eeeeee; */
+  /* background-color: #1776bf; */
+  /* position: relative; */
+  /* top: 0; */
+  /* left: 0; */
+  width: max-content;
+  max-width:100%;
   height: 100%;
-  width: 16% !important;
-  box-shadow: 0px 0px 1px black;
+  /* box-shadow: 0px 0px 1px black; */
 }
 .header {
   display: flex;
@@ -27,7 +28,16 @@
 }
 .category {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  margin-left: 5px;
+  margin-left: 8px;
+  margin-right: 16px;
+  outline: none;
+  align-self: center;
+}
+.category-item {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  margin-left: 24px;
+  margin-right: 16px;
+  margin-bottom: 4px;
   outline: none;
   align-self: center;
 }
@@ -115,11 +125,11 @@
   border-radius: 15px;
   background-color: lightgray;
   color: #000000;
-  margin-right: 10px;
-  margin-top: 10px;
+  margin-right: 5px;
+  margin-bottom: 10px;
   cursor: pointer;
   width: fit-content;
-  font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
+  font-family: "Segoe UI", Tahoma, Verdana, sans-serif;
 }
 .chips:hover {
   background-color: darkgray;
