--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/main/main.component.css
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/main/main.component.css
@@ -1,14 +1,15 @@
-.parent {
-  position: -webkit-sticky;
-  position: sticky;
-  z-index: 2;
-  width: 100% !important;
+.parent { 
+  /* position: -webkit-sticky;
+  position: sticky;  */
+  /* z-index: 2; */
+  /* width: 100% !important; */
+  /* position: relative; */
+  display: flex;
+  flex-direction: column;
 }
-.toolbar {
-  height: 52px;
-  width: 80%;
+.green {
+  display: flex;
 }
-
 span {
   outline: none;
 }
