--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/questions-list/questions-list.component.html
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/questions-list/questions-list.component.html
@@ -1,21 +1,72 @@
+<div>
+  <div class="head">
+    <div class="list">
+      <div class="breadcrumb" [routerLink]="['/main']">Home</div>
+      <mat-icon>chevron_right</mat-icon>
+      <div class="breadcrumb" [routerLink]="['/main/home/category']">
+        Category
+      </div>
+      <mat-icon>chevron_right</mat-icon>
+      <div class="breadcrumb">Search</div>
+    </div>
+    <div class="topbar">
+      <select class="pagesize" (change)="onChange($event)">
+        <option *ngFor="let item of pagesizelist" [value]="item"
+          >{{ item }}
+        </option>
+      </select>
+      <div class="navigation">
+        <mat-icon (click)="previousPage()">chevron_left</mat-icon>
+        <mat-icon (click)="nextPage()">chevron_right</mat-icon>
+      </div>
+    </div>
+  </div>
+</div>
 <div class="list-of-questions">
-    <ul>
-      <!-- <mat-card class="question-card" *ngFor="let list of getQuestions()" [routerLink]="['/qnas', list.Question.id]" (click)= "onClick(list.Question.id)"> -->
-      <mat-card class="question-card" *ngFor="let list of getQuestions()" matRipple >
-        <div class="question-item">
-          <div class="answer-layout">
-            <div class="no-of-answers">{{ list.answerCount }}</div>
-            <div class="answer-text">Answers</div>
-          </div>
-          <div class="question-layout">
-            <a class="question" [routerLink]="['/main/qna', list.Question.id]" (click)= "onClick(list.Question.id)">{{ list.Question.question }}</a>
-            <div class="description" [routerLink]="['/main/qna', list.Question.id]" (click)= "onClick(list.Question.id)" >{{ list.Question.description }}</div>
-            <!-- <div class="description" [routerLink]="['/qna', list.Question.id]" (click)= "onClick(list.Question.id)" [innerHtml]=list.Question.description></div> -->
+  <ul>
+    <div id="question_items">
+      <mat-card
+        class="question-card"
+        *ngFor="let list of editedResponse"
+        matRipple
+      >
+        <!-- <div *ngIf="(list | json) !== '{}'"> -->
+        <!-- <div *ngIf="list === '{}'"> -->
+          <div class="question-item">
+            <div class="answer-layout">
+              <div class="no-of-answers">{{ list.answerCount }}</div>
+              <div class="answer-text">Answers</div>
+            </div>
+            <div class="question-layout">
+              <a
+                class="question"
+                [routerLink]="['/main/qna', list.Question.id]"
+                (click)="onClick(list.Question.id)"
+                >{{ list.Question.question }}</a
+              >
+              <div
+                class="description"
+                [routerLink]="['/main/qna', list.Question.id]"
+                (click)="onClick(list.Question.id)"
+              >
+                {{ list.Question.description }}
+              </div>
+              <!-- <div class="description" [routerLink]="['/qna', list.Question.id]" (click)= "onClick(list.Question.id)" [innerHtml]=list.Question.description></div> -->
 
-              <span *ngFor="let tag of getTags(list.tags)" class="chips" (click)="onTagClick(tag)"> {{ tag }}</span>
-          </div>
+              <span
+                *ngFor="let tag of getTags(list.tags)"
+                class="chips"
+                (click)="onTagClick(tag)"
+              >
+                {{ tag }}</span
+              >
+            </div>
+          <!-- </div> -->
         </div>
       </mat-card>
-    </ul>
-  </div>
-  
+    </div>
+    <div id="no_results" style="visibility:hidden;">
+      <div class="no_results">No Results found</div>
+    </div>
+  </ul>
+</div>
