--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/review-questions/review-questions.component.html
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/review-questions/review-questions.component.html
@@ -6,7 +6,7 @@
             <div class="answer-text">Answers</div>
           </div>
           <div class="question-layout">
-            <a class="question" [routerLink]="['/main/approval', list.Question.id]" (click)= "onClick(list.Question.id)">{{ list.Question.question }}</a>
+            <a class="question" id="ques" [routerLink]="['/main/approval', list.Question.id]" (click)= "onClick(list.Question.id)">{{ list.Question.question }}</a>
             <div class="description" [routerLink]="['/main/approval', list.Question.id]" (click)= "onClick(list.Question.id)" >{{ list.Question.description }}</div>
               <span *ngFor="let tag of list.tags" class="chips" (click)="onTagClick(tag)"> {{ tag }}</span>
           </div>
