--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/add-qa-entry/add-qa-entry.component.html
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/add-qa-entry/add-qa-entry.component.html
@@ -1,7 +1,7 @@
 <div>
   <div class="head">
     <div>ADD A TROUBLESHOOTING STEP</div>
-    <div class="close" [routerLink]="['/main/home/category']">
+    <div class="close" (click)="close()">
       <mat-icon>close</mat-icon>
     </div>
   </div>
