--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/review-questions/review-questions.component.css
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/review-questions/review-questions.component.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 16px;
 }
 .question-card {
   margin-bottom: 10px;
