--- a/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/review-questions/review-questions.component.html
+++ b/troubleshooting/troubleshootingtool/src/main/resources/application/src/app/review-questions/review-questions.component.html
@@ -1,5 +1,5 @@
 <div class="list-of-questions">
-      <mat-card class="question-card" *ngFor="let list of response" matRipple >
+      <mat-card class="question-card" *ngFor="let list of editedResponse" matRipple >
         <div class="question-item">
           <div class="answer-layout">
             <div class="no-of-answers">{{ list.answerCount }}</div>
